frontend-deployment.yml
apiVersion: apps/v1 # Usa apps/v1beta2 para versiones anteriores a 1.9.0
kind: Deployment
metadata:
  name: frontend-keycloak
  labels:
    app: frontend-keycloak
spec:
  selector:
    matchLabels:
      app: frontend-keycloak
  replicas: 2 # indica al controlador que ejecute 2 pods
  template:
    metadata:
      labels:
        app: frontend-keycloak
    spec:
      containers:
      - name: frontend
        image: cavanosa/frontend-keycloak:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-keycloak
  labels:
    app: frontend-keycloak
spec:
  selector:
    app: frontend-keycloak
  ports:
    - nodePort: 30170
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
